Fixed overflow problem

--- a/static/styles.css
+++ b/static/styles.css
@@ -62,6 +62,9 @@ body {
   content: "";
   display: table;
   clear: both;
+}
+
+.row {
   margin-left: 15px;
   margin-right: 15px;
 }
